<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group
        android:checkableBehavior="single">

        <item
            android:id="@+id/item_current_role"
            android:title="@string/current_role">
            <menu>
                <item
                    android:id="@+id/recentRoleItem"
                    android:title="@string/recent_roles"/>
                <item
                    android:id="@+id/fragment_my_roles"
                    android:title="@string/my_roles"/>
            </menu>
        </item>

    </group>


    <group
        android:checkableBehavior="single"
        android:menuCategory="system">

        <item
            android:id="@+id/item_logout"
            android:title="@string/logout" />
    </group>

</menu>