<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreateSubordinateFragment">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_create_subordinate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/allerta"
                android:text="@string/register_your_organization"
                android:textSize="22sp" />

            <TextView
                android:id="@+id/text_role_subtitle_FCS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:fontFamily="@font/allerta"
                android:gravity="center"
                android:paddingTop="64dp"
                android:text="@string/role_config" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <EditText
                android:id="@+id/name_FCS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="32dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/name"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                tools:ignore="LabelFor" />

            <Spinner
                android:id="@+id/spinner_role_template_FCS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="32dp"
                android:minHeight="48dp"/>
            <TextView
                android:id="@+id/text_role_template_hint_FCS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:hint="@string/role_template"
                android:textColorHint="#546E7A" />


            <Spinner
                android:id="@+id/spinner_create_substruct_FCS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="32dp"
                android:minHeight="48dp"/>
            <TextView
                android:id="@+id/text_create_substruct_hint_FCS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:hint="@string/create_substruct_role_right_hint"
                android:textColorHint="#546E7A" />


            <Spinner
                android:id="@+id/spinner_create_subordinates_FCS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="32dp"
                android:minHeight="48dp"/>
            <TextView
                android:id="@+id/text_create_subordinates_hint_FCS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:hint="@string/create_subordinates_role_right_hint"
                android:textColorHint="#546E7A" />


            <Spinner
                android:id="@+id/spinner_send_task_FCS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="32dp"
                android:minHeight="48dp"/>
            <TextView
                android:id="@+id/text_send_task_hint_FCS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:hint="@string/send_task_role_right_hint"
                android:textColorHint="#546E7A" />


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_send_report_FCS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="32dp"
                android:minHeight="48dp"
                android:text="@string/send_reports"
                android:theme="@style/SCBSwitch"/>
            <TextView
                android:id="@+id/text_send_report_hint_FCS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:hint="@string/send_report_hint"
                android:textColorHint="#546E7A" />


            <Spinner
                android:id="@+id/spinner_send_petition_FCS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="32dp"
                android:minHeight="48dp" />
            <TextView
                android:id="@+id/text_send_petition_hint_FCS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:hint="@string/send_petition_role_right_hint"
                android:textColorHint="#546E7A" />


            <Spinner
                android:id="@+id/spinner_reject_task_FCS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="32dp"
                android:minHeight="48dp"/>
            <TextView
                android:id="@+id/text_reject_task_hint_FCS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:hint="@string/reject_task_role_right_hint"
                android:textColorHint="#546E7A" />


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_create_project_FCS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="32dp"
                android:minHeight="48dp"
                android:text="@string/create_project"
                android:theme="@style/SCBSwitch"/>
            <TextView
                android:id="@+id/text_create_project_hint_FCS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:hint="@string/create_project_hint"
                android:textColorHint="#546E7A" />


            <Spinner
                android:id="@+id/spinner_edit_other_rights_FCS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="32dp"
                android:minHeight="48dp"/>
            <TextView
                android:id="@+id/text_edit_other_rights_hint_FCS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:hint="@string/edit_other_rights_role_right_hint"
                android:textColorHint="#546E7A" />


            <androidx.appcompat.widget.SwitchCompat
                android:id="@+id/switch_edit_oneself_rights_FCS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="32dp"
                android:minHeight="48dp"
                android:text="@string/edit_oneself_rights"
                android:theme="@style/SCBSwitch"/>
            <TextView
                android:id="@+id/text_edit_oneself_rights_hint_FCS"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:hint="@string/edit_oneself_rights_role_right_hint"
                android:textColorHint="#546E7A" />

            <Button
                android:id="@+id/button_create_subordinate"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="48dp"
                android:text="@string/registerButtonText" />
        </LinearLayout>
    </ScrollView>
</FrameLayout>