<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.CreateOrgBlankFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical">

            <TextView
                android:id="@+id/text_regist_org_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:fontFamily="@font/allerta"
                android:text="@string/register_your_organization"
                android:textSize="22sp" />


            <TextView
                android:id="@+id/text_org_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:fontFamily="@font/allerta"
                android:gravity="center"
                android:paddingTop="64dp"
                android:text="@string/organisation_config" />

            <View
                android:id="@+id/divider"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <EditText
                android:id="@+id/editText_org_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="32dp"
                android:autofillHints=""
                android:ems="10"
                android:inputType="text"
                android:minHeight="48dp"
                android:text="@string/name"
                android:textSize="22sp"
                tools:ignore="LabelFor" />

            <EditText
                android:id="@+id/editText_org_desc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="32dp"
                android:autofillHints=""
                android:ems="10"
                android:hint="@string/description"
                android:inputType="textMultiLine"
                android:minHeight="48dp"
                tools:ignore="LabelFor" />

            <TextView
                android:id="@+id/text_gendir_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:fontFamily="@font/allerta"
                android:gravity="center"
                android:paddingTop="64dp"
                android:text="@string/ceo_config" />

            <View
                android:id="@+id/divider2"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="?android:attr/listDivider" />

            <Spinner
                android:id="@+id/spinner_role_template"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="48dp"
                android:layout_marginTop="32dp"
                android:minHeight="48dp"/>

            <TextView
                android:id="@+id/text_role_template_hint"
                android:layout_marginHorizontal="48dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/role_template"/>


        </LinearLayout>
    </ScrollView>

</FrameLayout>